[gd_scene load_steps=5 format=3 uid="uid://cxp8y2oegmtg0"]

[ext_resource type="Script" path="res://scripts/checkpoint.gd" id="1_hvadl"]
[ext_resource type="Texture2D" uid="uid://cv2nqh7kov6lu" path="res://sprites/other/spr_checkpoint.png" id="2_q1yyu"]
[ext_resource type="AudioStream" uid="uid://ccx10ayw4i2hk" path="res://sounds/sfx_checkpoint.wav" id="3_7rq1j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m04nh"]
size = Vector2(26, 46)

[node name="checkpoint" type="Node2D" groups=["checkpointGroup"]]
script = ExtResource("1_hvadl")

[node name="checkSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_q1yyu")
centered = false
hframes = 2

[node name="CheckHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7rq1j")
bus = &"Sound"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 25)
shape = SubResource("RectangleShape2D_m04nh")
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(13, 19)
scale = Vector2(9.6, 8.9)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
